V12 готовый вариант, осталось почистить и протестировать на др компах